# quantum-rust

./: .gitignore  Cargo.toml  GITHUB_RELEASE_COMMANDS.sh  LICENSE-APACHE  LICENSE-MIT  MANUAL_PUSH_GUIDE.md  README.md  configure_ide_integration.sh  deploy_quantum_rust_system_default.sh  final_deployment_success_report.md  final_deployment_verification.sh  phase1_completion_report.md  phase1_integration_test.rs  phase2_algorithm_optimization_test.rs  phase2_completion_report.md  phase2_completion_verification_report.md  phase2_fix_progress_report.md  phase3_architecture_optimization_test.rs  phase3_completion_report.md  phase3_final_progress_report.md  phase3_quick_cleanup_report.md
Rust/: AQFH_Quantum_Swarm_v6  quantum-rust-build.py
Rust/compiler/rustc_quantum/: Cargo.toml  quantum_integration_demo
Rust/compiler/rustc_quantum/src/: lib.rs  quantum_lexer.rs  quantum_optimizer.rs  quantum_parallel_optimizer.rs  quantum_parser.rs  quantum_semantic.rs
Rust/quantum-rust-dist/: CREATE_GITHUB_RELEASE.md  README.md  RELEASE_SUMMARY.md  VERSION  dual_capability_demo  install-system-default.sh  install.sh  prepare-github-release.py  quantum-config.json  quantum_showcase
Rust/quantum-rust-dist/doc/: api-reference.md  benchmarks.md  examples.md  migration.md  quantum-rust-guide.md  quantum-stdlib.md
Rust/quantum-rust-dist/examples/: dual_capability_demo.rs  quantum_showcase.rs
Rust/quantum-rust-dist/releases/: RELEASE_NOTES.md  install.sh
Rust/quantum-rust-dist/releases/docs/: EXAMPLES.md  api-reference.md  user-guide.md
Rust/quantum-rust-dist/src/compiler/rustc_quantum/: Cargo.toml
Rust/quantum-rust-dist/src/compiler/rustc_quantum/examples/: quantum_integration_demo.rs
Rust/quantum-rust-dist/src/compiler/rustc_quantum/src/: arrow_data.rs  lib.rs  quantum_algorithms.rs  quantum_lexer.rs  quantum_optimizer.rs  quantum_parser.rs  quantum_semantic.rs
docs/: README.md
releases/: VERSION.json  release-info.json
releases/docs/: CHANGELOG.md  INSTALL.md  PERFORMANCE.md
scripts/: release.py
src/: lib.rs
src/quantum/: mod.rs
